--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,51 @@
-version: '3.1'
+# For more information: https://laravel.com/docs/sail
+version: '3'
 services:
-
-  #PHP Service
-  app:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile
-    container_name: vue-starter
-    restart: always
-    tty: true
-    environment:
-      SERVICE_NAME: vue-starter
-      SERVICE_TAGS: dev
-    working_dir: /var/www
-    volumes:
-       - ./:/var/www
-       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
-    networks:
-      - app-network
-
-  #Nginx Service
-  webserver:
-    image: nginx:alpine
-    container_name: vue-starter-webserver
-    restart: always
-    tty: true
-    ports:
-      - "8008:80"
-        #  - "4431:443"
-    volumes:
-      - ./:/var/www
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
-    networks:
-      - app-network
-
-  #MySQL Service
-  db:
-    image: mysql:8.0.17
-    container_name: vue-starter-db
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    tty: true
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: 123456
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    volumes:
-      - dbdata:/var/lib/mysql
-    networks:
-      - app-network
-
-  #adminer for db access
-  adminer:
-    image: adminer:latest
-    restart: unless-stopped
-    ports:
-      - 8080:8080
-
-#Docker Networks
+    laravel.test:
+        user: root
+        build:
+            context: ./docker/8.1
+            dockerfile: Dockerfile
+            args:
+                WWWGROUP: '${WWWGROUP}'
+        image: sail-8.1/app
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
+        ports:
+            - '${APP_PORT:-80}:80'
+        environment:
+            WWWUSER: '${WWWUSER}'
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+        volumes:
+            - '.:/var/www/html'
+        networks:
+            - sail
+        depends_on:
+            - mysql
+    mysql:
+        image: 'mysql/mysql-server:8.0'
+        ports:
+            - '${FORWARD_DB_PORT:-3306}:3306'
+        environment:
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_HOST: '%'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+        volumes:
+            - 'sailmysql:/var/lib/mysql'
+        networks:
+            - sail
+        healthcheck:
+            test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
+            retries: 3
+            timeout: 5s
 networks:
-  app-network:
-    driver: bridge
-
-#Volumes
+    sail:
+        driver: bridge
 volumes:
-  dbdata:
-    driver: local 
-
+    sailmysql:
+        driver: local
