--- a/docker/8.1/Dockerfile
+++ b/docker/8.1/Dockerfile
@@ -45,6 +45,8 @@ RUN apt-get update \
 
 RUN setcap "cap_net_bind_service=+ep" /usr/bin/php8.1
 
+RUN docker-php-ext-install opcache COPY ./opcache.ini /usr/local/etc/php/conf.d/opcache.ini
+
 RUN groupadd --force -g $WWWGROUP sail
 RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
 
