--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "sweetalert2": "^9.17.2",
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
-        "vue-router": "^3.5.3"
+        "vue-router": "^3.5.3",
+        "vue-wysiwyg": "^1.7.2"
     }
 }
