--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/passport": "^10.0",
         "laravel/telescope": "^4.7",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.1"
+        "laravel/ui": "^3.1",
+        "stevebauman/purify": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
