--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/telescope": "^4.7",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
+        "prettus/l5-repository": "^2.8",
         "stevebauman/purify": "^4.0"
     },
     "require-dev": {
