add questions logics, env and gitignore changes

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 APP_NAME="Кафедра ПИ"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+JuTArUlilv9k6qjUuV8F9WLqf3LYKzwTtMoHRI+Jr0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=pi_backend
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -45,3 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#ПЕРЕМЕННЫЕ ДЛЯ ФРОНТЕНДА (должны начинаться с MIX, cм. документацию laravel mix)
+MIX_API_PATH="${APP_URL}/api/"
+MIX_DASHBOARD_PATH="${MIX_API_PATH}dashboard/"
